Updated swagger and oauth
